--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,15 +9,20 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
         format_sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+  data:
+    redis:
+      host: localhost
+      port: ${SPRING_REDIS_PORT}
+
 
 server:
-  port: 8081
+  port: ${SPRING_APPLICATION_PORT}
 
 
 
